--- a/arch/arm/mach-sunxi/Kconfig
+++ b/arch/arm/mach-sunxi/Kconfig
@@ -130,10 +130,14 @@ config MACH_SUN8I_V3S
 
 config MACH_SUN9I
 	bool "sun9i (Allwinner A80)"
+	select ARCH_SUPPORT_PSCI
+	select ARMV7_BOOT_SEC_DEFAULT if OLD_SUNXI_KERNEL_COMPAT
 	select CPU_V7
-	select SUNXI_HIGH_SRAM
-	select SUNXI_GEN_SUN6I
+	select CPU_V7_HAS_NONSEC
+	select CPU_V7_HAS_VIRT
 	select SUPPORT_SPL
+	select SUNXI_GEN_SUN6I
+	select SUNXI_HIGH_SRAM
 
 config MACH_SUN50I
 	bool "sun50i (Allwinner A64)"
